SERVER-15271 rocks engine doesn't return capped information in RocksRecordStore::appendCustomStats()

Closes #774

Signed-off-by: Benety Goh <benety@mongodb.com>